# beatsaver-openapi

./: .gitignore  Cargo.toml  README.md  generate.sh
.openapi-generator/: FILES
docs/: ActionResponse.md  AuthRequest.md  DefaultApi.md  MapDetail.md  MapDetailMetadata.md  MapDetailWithOrder.md  MapDifficulty.md  MapParitySummary.md  MapStats.md  MapTestplay.md  MapVersion.md  PlaylistBatchRequest.md  PlaylistFull.md  PlaylistPage.md  PlaylistSearchResponse.md  PlaylistStats.md  SearchResponse.md  UserDetail.md  UserDiffStats.md  UserFollowData.md  UserStats.md  VerifyResponse.md  VoteRequest.md  VoteResponse.md  VoteSummary.md
src/apis/: configuration.rs  default_api.rs
src/models/: action_response.rs  auth_request.rs  map_detail.rs  map_detail_metadata.rs  map_detail_with_order.rs  map_difficulty.rs  map_parity_summary.rs  map_stats.rs  map_testplay.rs  map_version.rs  mod.rs  playlist_batch_request.rs  playlist_full.rs  playlist_page.rs  playlist_search_response.rs  playlist_stats.rs  search_response.rs  user_detail.rs  user_diff_stats.rs  user_follow_data.rs  user_stats.rs  verify_response.rs  vote_request.rs  vote_response.rs  vote_summary.rs
